compressed all PNG images and fixed a typo

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="logo"><i class="fa fa-graduation-cap"></i></div>
           <h1 class="welcome">
             Learn Spring Boot.<br />
-            <span>Start writing Spring Applicaitons in minutes, not days!</span>
+            <span>Start writing Spring Applications in minutes, not days!</span>
           </h1> 
           <div class="macbook-preview">
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
